--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-06  Daichi Kawahata <daichi@xfce.org>
+
+	* LINGUAS, ro.po: Added Romanian translations by Misu Moldovan
+	  <dumol@gnome.ro>.
+
 2006-06-05  Adriano Winter Bess  <adriano@xfce.org>
 
 	* pt_BR.po: Updated brazilian portuguese translations.
