--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-08  Benedikt Meurer <benny@xfce.org>
+
+	* POTFILES.in: Add new files here.
+	* libexo-0.3.pot, *.po: Updated.
+
 2006-06-06  Daichi Kawahata <daichi@xfce.org>
 
 	* LINGUAS, ro.po: Added Romanian translations by Misu Moldovan
@@ -30,7 +35,7 @@
 2006-05-13  Daichi Kawahata <daichi@xfce.org>
 
 	* cs.po: Updated Czech translations by Michal Varady
-          <miko.vaji@gmail.com>.
+	  <miko.vaji@gmail.com>.
 	* libexo-0.3.pot, *.po: Updated.
 	* pl.po: Updated Polish translations by Szymon Kalasz
 	  <szymon_maestro@gazeta.pl>.
