[l10n:eu] Updated basque translation
(Old svn revision: 22044)

--- a/po/eu.po
+++ b/po/eu.po
@@ -1,4 +1,4 @@
-# translation of eu.po to librezale
+# translation of eu.po to Euskara
 # Basque translations for xfce package.
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
@@ -9,9 +9,9 @@ msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-06-08 01:31+0200\n"
-"PO-Revision-Date: 2006-05-30 16:08+0200\n"
+"PO-Revision-Date: 2006-06-08 17:38+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
-"Language-Team: librezale <librezale@librezale.org>\n"
+"Language-Team: Euskara <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -36,7 +36,7 @@ msgstr "Ellipsize ezarri"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:164
 msgid "Whether this tag affects the ellipsize mode"
-msgstr "Marka honek elisatze moduan nola eragingo duen"
+msgstr "Marka honek elipsatzen moduan nola eragingo duen"
 
 #: ../exo/exo-ellipsized-label.c:123
 msgid ""
@@ -179,8 +179,7 @@ msgid "The model for the icon view"
 msgstr "Ikono ikuspegiaren modeloa"
 
 #: ../exo/exo-icon-view.c:792
-msgid ""
-"How the text and icon of each item are positioned relative to each other"
+msgid "How the text and icon of each item are positioned relative to each other"
 msgstr "Elementu bakoitzaren testu eta ikonoaren kokapena bestearekiko"
 
 #: ../exo/exo-icon-view.c:824
@@ -197,7 +196,7 @@ msgstr "Lerro tartea"
 
 #: ../exo/exo-icon-view.c:841
 msgid "Space which is inserted between grid rows"
-msgstr "Sareta lerroren artean txertatuko den tartea"
+msgstr "Sareta lerroen artean txertatuko den tartea"
 
 #: ../exo/exo-icon-view.c:855
 msgid "Search Column"
@@ -268,7 +267,7 @@ msgid ""
 "Drag an item onto the toolbars above to add it, from the toolbars in the "
 "items table to remove it."
 msgstr ""
-"Elementu bat tresna-barrara mugitu eta bertan gehitu, tresnabarra-tik "
+"Elementu bat tresna barra mugitu eta bertan gehitu, tresnabarra-tik "
 "kanpora mugitu berau ezabatzeko."
 
 #: ../exo/exo-toolbars-editor.c:551
@@ -434,83 +433,82 @@ msgstr "Erroreen berri eman <%s>-ra.\n"
 
 #. allocate the file chooser
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:295
-#, fuzzy
 msgid "Select an Application"
-msgstr "Aplikazioa hautatu"
+msgstr "Aplikazio bat hautatu"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:304
 #: ../exo-desktop-item-edit/exo-die-editor.c:629
 #: ../exo-helper/exo-helper-chooser.c:424
 msgid "All Files"
-msgstr ""
+msgstr "Fitxategi Guztiak"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:309
 #: ../exo-helper/exo-helper-chooser.c:429
 msgid "Executable Files"
-msgstr ""
+msgstr "Fitxategi abiarazgarriak"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:324
 #: ../exo-helper/exo-helper-chooser.c:444
 msgid "Perl Scripts"
-msgstr ""
+msgstr "Perl Script-ak"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:330
 #: ../exo-helper/exo-helper-chooser.c:450
 msgid "Python Scripts"
-msgstr ""
+msgstr "Python Script-ak"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:336
 #: ../exo-helper/exo-helper-chooser.c:456
 msgid "Ruby Scripts"
-msgstr ""
+msgstr "Ruby Script-ak"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:342
 #: ../exo-helper/exo-helper-chooser.c:462
 msgid "Shell Scripts"
-msgstr ""
+msgstr "Shell Script-ak"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:306
 msgid "_Name:"
-msgstr ""
+msgstr "_Izena:"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:324
 msgid "C_omment:"
-msgstr ""
+msgstr "Iru_zkina:"
 
 #. TRANSLATORS: Label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:342
 msgid "Comm_and:"
-msgstr ""
+msgstr "Kom_andoa:"
 
 #. TRANSLATORS: Label in "Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:359
 msgid "_URL:"
-msgstr ""
+msgstr "_URL-a:"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:377
 msgid "_Icon:"
-msgstr ""
+msgstr "_Ikonoa:"
 
 #. TRANSLATORS: Label for the icon button in "Create Launcher"/"Create Link" dialog if no icon selected
 #. setup a label to tell that no icon was selected
 #: ../exo-desktop-item-edit/exo-die-editor.c:396
 #: ../exo-desktop-item-edit/exo-die-editor.c:1066
 msgid "No icon"
-msgstr ""
+msgstr "Ikonorik ez"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:407
 msgid "Options:"
-msgstr ""
+msgstr "Aukerak:"
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:418
 msgid "Use _startup notification"
-msgstr ""
+msgstr "A_biarazte berri emateak erabili"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:419
 msgid ""
@@ -518,118 +516,117 @@ msgid ""
 "from the file manager or the menu. Not every application supports startup "
 "notification."
 msgstr ""
+"Komandoa fitxategi kudeatzailearen edo menuaren bitartez abiaraztean "
+"abiarazte berri ematea gaitu. Abiarazte berri ematea ez dute aplikazio "
+"guztiek onartzen."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
-#, fuzzy
 msgid "Run in _terminal"
-msgstr "X Terminala"
+msgstr "_Terminalean abiarazi"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:432
 msgid "Select this option to run the command in a terminal window."
-msgstr ""
+msgstr "Aukera hau hautatu komandoa terminal batetan abiarazteko."
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:619
-#, fuzzy
 msgid "Select an Icon"
-msgstr "Aplikazioa hautatu"
+msgstr "Ikonoa hautatu"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:634
 msgid "Image Files"
-msgstr ""
+msgstr "Irudi Fitxategiak"
 
 #. --- constants ---
 #: ../exo-desktop-item-edit/main.c:50
 msgid "Create Launcher"
-msgstr ""
+msgstr "Abiarazlea sortu"
 
 #: ../exo-desktop-item-edit/main.c:50
 msgid "Create Link"
-msgstr ""
+msgstr "Lotura sortu"
 
 #: ../exo-desktop-item-edit/main.c:51
 msgid "Edit Launcher"
-msgstr ""
+msgstr "Abiarazlea editatu"
 
 #: ../exo-desktop-item-edit/main.c:51
 msgid "Edit Link"
-msgstr ""
+msgstr "Lotura editatu"
 
 #: ../exo-desktop-item-edit/main.c:72
 msgid "Create a new desktop file in the given directory"
-msgstr ""
+msgstr "Emandako direktorioan idazmahai fitxategi berri bat sortu"
 
 #: ../exo-desktop-item-edit/main.c:73
 msgid "Type of desktop file to create (Application or Link)"
-msgstr ""
+msgstr "Sortu beharreko idazmahai fitxategia (Aplikazio edo Lotura)"
 
 #: ../exo-desktop-item-edit/main.c:74
 msgid "Preset name when creating a desktop file"
-msgstr ""
+msgstr "Idazmahai fitxategi bat sortzean izena aurrez ezarri"
 
 #: ../exo-desktop-item-edit/main.c:75
 msgid "Preset comment when creating a desktop file"
-msgstr ""
+msgstr "Idazmahai fitxategi bat sortzean azalpena aurrez ezarri"
 
 #: ../exo-desktop-item-edit/main.c:76
 msgid "Preset command when creating a launcher"
-msgstr ""
+msgstr "Idazmahai fitxategi bat sortzean komandoa aurrez ezarri"
 
 #: ../exo-desktop-item-edit/main.c:77
 msgid "Preset URL when creating a link"
-msgstr ""
+msgstr "Idazmahai fitxategi bat sortzean URL-a aurrez ezarri"
 
 #: ../exo-desktop-item-edit/main.c:78
 msgid "Preset icon when creating a desktop file"
-msgstr ""
+msgstr "Idazmahai fitxategi bat sortzean ikonoa aurrez ezarri"
 
 #: ../exo-desktop-item-edit/main.c:79
-#, fuzzy
 msgid "Print version information and exit"
-msgstr "  -v, --version     Bertsio xehetasunak bistarazi eta irten\n"
+msgstr "Bertsio argibideak bistarazi eta irten"
 
 #. initialize Gtk+
 #: ../exo-desktop-item-edit/main.c:125
 msgid "[FILE|FOLDER]"
-msgstr ""
+msgstr "[FITXATEGI|KARPETA]"
 
 #: ../exo-desktop-item-edit/main.c:138
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open display: %s"
-msgstr "Huts  \"%s\" irekitzerakoan."
+msgstr "Huts pantaila irekitzerakoan: %s"
 
 #: ../exo-desktop-item-edit/main.c:167
-#, fuzzy
 msgid "No file/folder specified"
-msgstr "Ez da komandoa ezarri"
+msgstr "Ez da fitxategi/karpeta ezarri"
 
 #. tell the user that we don't support the type
 #: ../exo-desktop-item-edit/main.c:225
 #, c-format
 msgid "Unsupported desktop file type '%s'"
-msgstr ""
+msgstr "'%s' idazmahai fitxategi mota ez da onartzen"
 
 #. add the "Create"/"Save" button (as default)
 #: ../exo-desktop-item-edit/main.c:245
 msgid "C_reate"
-msgstr ""
+msgstr "So_rtu"
 
 #. create failed, ask the user to specify a file name
 #: ../exo-desktop-item-edit/main.c:365
 msgid "Choose filename"
-msgstr ""
+msgstr "Fitxategi izena hautatu"
 
 #: ../exo-desktop-item-edit/main.c:419
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to create \"%s\"."
-msgstr "Huts  \"%s\" irekitzerakoan."
+msgstr "Huts  \"%s\" sortzerakoan."
 
 #: ../exo-desktop-item-edit/main.c:419
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to save \"%s\"."
-msgstr "Huts  \"%s\" irekitzerakoan."
+msgstr "Huts  \"%s\" gordetzerakoan."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:100
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:1
@@ -638,7 +635,7 @@ msgstr "Hobetsiriko Aplikazioak"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:101
 msgid "Select default applications for various services"
-msgstr ""
+msgstr "Zenbait erabilpenerako lehenetsiriko aplikazioak ezarri"
 
 #.
 #. Internet
@@ -762,7 +759,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser.c:602
 msgid "Browse the file system to choose a custom command."
-msgstr "Pertsonalizatutakokomando bat aukeratzeko fitxategi sistema arakatu."
+msgstr "Pertsonalizatutako komando bat aukeratzeko fitxategi sistema arakatu."
 
 #: ../exo-helper/exo-helper-chooser.c:777
 msgid "_Other..."
@@ -884,7 +881,7 @@ msgstr "Mozilla Posta"
 
 #: ../exo-helper/helpers/mutt.desktop.in.in.h:1
 msgid "Mutt"
-msgstr ""
+msgstr "Mutt"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.in.h:1
 msgid "Opera Browser"
@@ -896,11 +893,11 @@ msgstr "Opera Posta"
 
 #: ../exo-helper/helpers/sylpheed.desktop.in.in.h:1
 msgid "Sylpheed"
-msgstr ""
+msgstr "Sylpheed"
 
 #: ../exo-helper/helpers/sylpheed-claws.desktop.in.in.h:1
 msgid "Sylpheed Claws"
-msgstr ""
+msgstr "Sylpheed Claws"
 
 #: ../exo-helper/helpers/thunderbird.desktop.in.in.h:1
 msgid "Mozilla Thunderbird"
@@ -920,14 +917,11 @@ msgstr "       exo-open --launch MOTA [PARAMETROAK...]"
 
 #: ../exo-open/main.c:46
 msgid "  -h, --help                          Print this help message and exit"
-msgstr ""
-"  -h, --help                          Laguntza testua hau bistarazi eta irten"
+msgstr "  -h, --help                          Laguntza testua hau bistarazi eta irten"
 
 #: ../exo-open/main.c:47
-msgid ""
-"  -v, --version                       Print version information and exit"
-msgstr ""
-"  -v, --version                       Bertsio xehetasunak bistarazi eta irten"
+msgid "  -v, --version                       Print version information and exit"
+msgstr "  -v, --version                       Bertsio xehetasunak bistarazi eta irten"
 
 #: ../exo-open/main.c:49
 msgid ""
@@ -937,11 +931,9 @@ msgid ""
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch MOTA [PARAMETROak...]       MOTA motako aplikazio gogokoena "
-"abiarazi\n"
-"PARAMETROak parametroez non mota hauetako\n"
-"balio bat izan behar da.                                      TYPE with the "
-"optional PARAMETERs, where\n"
-"                                      TYPE is one of the following values."
+"                                      abiaraz PARAMETROak parametroez "
+"non\n"
+"                                      mota hauetako balio bat izan behar da."
 
 #: ../exo-open/main.c:53
 msgid "The following TYPEs are supported for the --launch command:"
@@ -985,3 +977,4 @@ msgstr "Huts \"%s\" ataleko hobetsiriko aplikazioa irekitzerakoan."
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "Huts \"%s\" URL-a irekitzerakoan."
+
