--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-08  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Updated Basque translation.
+
 2006-06-08  Benedikt Meurer <benny@xfce.org>
 
 	* POTFILES.in: Add new files here.
