Updated Finnish translation.
(Old svn revision: 22050)

--- a/po/fi.po
+++ b/po/fi.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.7svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-06-08 01:31+0200\n"
-"PO-Revision-Date: 2006-05-10 16:55+0300\n"
+"POT-Creation-Date: 2006-06-09 10:01+0300\n"
+"PO-Revision-Date: 2006-06-09 12:03+0300\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp2.inet.fi>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -641,14 +641,14 @@ msgstr "Internet"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:138
 msgid "Default Web Browser"
-msgstr "WWW-selain"
+msgstr "Web-selain"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:146
 msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
-"Oletusarvoista WWW-selainta käytetään hyperlinkkien\n"
+"Oletusarvoista web-selainta käytetään hyperlinkkien\n"
 "avaamiseen ja ohjeiden näyttämiseen."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:170
@@ -701,7 +701,7 @@ msgstr "Ei sovellusta valittuna"
 
 #: ../exo-helper/exo-helper-chooser.c:342
 msgid "Failed to set default Web Browser"
-msgstr "Oletusarvoisen WWW-selaimen asettaminen epäonnistui"
+msgstr "Oletusarvoisen web-selaimen asettaminen epäonnistui"
 
 #: ../exo-helper/exo-helper-chooser.c:343
 msgid "Failed to set default Mail Reader"
@@ -718,7 +718,7 @@ msgstr "Valitse sovellus"
 
 #: ../exo-helper/exo-helper-chooser.c:527
 msgid "Choose a custom Web Browser"
-msgstr "Valitse mukautettu WWW-selain"
+msgstr "Valitse mukautettu web-selain"
 
 #: ../exo-helper/exo-helper-chooser.c:528
 msgid "Choose a custom Mail Reader"
@@ -734,7 +734,7 @@ msgid ""
 "as default Web Browser for Xfce:"
 msgstr ""
 "Määritä sovellus, jota käytetään Xfce:n\n"
-"oletusarvoisena WWW-selaimena:"
+"oletusarvoisena web-selaimena:"
 
 #: ../exo-helper/exo-helper-chooser.c:535
 msgid ""
@@ -773,7 +773,7 @@ msgid ""
 "Please choose your preferred Web\n"
 "Browser now and click OK to proceed."
 msgstr ""
-"Valitse haluamasi WWW-selain ja\n"
+"Valitse haluamasi web-selain ja\n"
 "napsauta OK jatkaaksesi."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:286
@@ -834,7 +834,7 @@ msgstr "Debianin X-pääteohjelma"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.in.h:1
 msgid "Epiphany Web Browser"
-msgstr "Epiphany WWW-selain"
+msgstr "Epiphany web-selain"
 
 #: ../exo-helper/helpers/eterm.desktop.in.in.h:1
 msgid "Enlightened Terminal Emulator"
@@ -850,7 +850,7 @@ msgstr "Mozilla Firefox"
 
 #: ../exo-helper/helpers/galeon.desktop.in.in.h:1
 msgid "Galeon Web Browser"
-msgstr "Galeon WWW-selain"
+msgstr "Galeon web-selain"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.in.h:1
 msgid "GNOME Terminal"
@@ -862,7 +862,7 @@ msgstr "KMail"
 
 #: ../exo-helper/helpers/konqueror.desktop.in.in.h:1
 msgid "Konqueror Web Browser"
-msgstr "Konqueror WWW-selain"
+msgstr "Konqueror web-selain"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.in.h:1
 msgid "Mozilla Browser"
@@ -874,7 +874,7 @@ msgstr "Mozilla sähköposti"
 
 #: ../exo-helper/helpers/mutt.desktop.in.in.h:1
 msgid "Mutt"
-msgstr ""
+msgstr "Mutt"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.in.h:1
 msgid "Opera Browser"
@@ -886,11 +886,11 @@ msgstr "Opera sähköposti"
 
 #: ../exo-helper/helpers/sylpheed.desktop.in.in.h:1
 msgid "Sylpheed"
-msgstr ""
+msgstr "Sylpheed"
 
 #: ../exo-helper/helpers/sylpheed-claws.desktop.in.in.h:1
 msgid "Sylpheed Claws"
-msgstr ""
+msgstr "Sylpheed Claws"
 
 #: ../exo-helper/helpers/thunderbird.desktop.in.in.h:1
 msgid "Mozilla Thunderbird"
@@ -941,7 +941,7 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
-"  WebBrowser       - Oletusarvoinen WWW-selain.\n"
+"  WebBrowser       - Oletusarvoinen web-selain.\n"
 "  MailReader       - Oletusarvoinen sähköpostiohjelma.\n"
 "  TerminalEmulator - Oletusarvoinen pääteohjelma."
 
