Updated Polish translations by Szymon Kalasz <szymon_maestro@gazeta.pl>.
(Old svn revision: 22056)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,10 +1,15 @@
+2006-06-10  Daichi Kawahata <daichi@xfce.org>
+
+	* pl.po: Updated Polish translations by Szymon Kalasz
+	  <szymon_maestro@gazeta.pl>.
+
 2006-06-09  Jari Rahkonen <jari.rahkonen@pp2.inet.fi>
 
 	* fi.po: Updated Finnish translation.
 
 2006-06-08  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Updated Basque translation.
+	* eu.po: Updated Basque translation.
 
 2006-06-08  Benedikt Meurer <benny@xfce.org>
 
