--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-11	Benedikt Meurer <benny@xfce.org>
+
+	* exo-helper/helpers/balsa.desktop.in.in: Use the correct icon.
+	* exo-helper/helpers/exo-compose-mail-0.3: Various fixes.
+
 2006-06-08	Benedikt Meurer <benny@xfce.org>
 
 	* exo-helper/helpers/exo-compose-mail-0.3: Add simple Perl script to
