--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-16  Daichi Kawahata <daichi@xfce.org>
+
+	* libexo-0.3.pot, *.po: Updated.
+
 2006-06-10  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translations.
